[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/carangueijo_andando.png" type="Texture" id=1]
[ext_resource path="res://scripts/Inimigo_sauro.gd" type="Script" id=2]
[ext_resource path="res://sprites/carangueijo_parado.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 9 ), SubResource( 10 ), SubResource( 4 ) ],
"loop": true,
"name": "andando",
"speed": 9.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 5.49999 )

[sub_resource type="CircleShape2D" id=2]
radius = 65.0692

[node name="Inimigo_sauro" type="KinematicBody2D" groups=["inimigo"]]
collision_layer = 8
collision_mask = 512
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "andando"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.39038e-05, 2.49999 )
rotation = -3.14159
shape = SubResource( 3 )
one_way_collision = true

[node name="colisao_frente" type="RayCast2D" parent="."]
position = Vector2( 0, 3 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 6.27041e-05, 10 )
collision_mask = 513

[node name="estaNa_plataforma" type="RayCast2D" parent="."]
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, 14 )
collision_mask = 512

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
